<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonav_navigation</name>
  <version>1.0.0</version>
  <description>Navigation stack for the autonav project.</description>
  <maintainer email="dmitry.anikin@proton.me">Dmitry Anikin</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>opennav_docking</exec_depend>
  <exec_depend>aruco_opencv</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
